--- a/tutorial-frontend/client/src/app/category/category-list/category-list.component.scss
+++ b/tutorial-frontend/client/src/app/category/category-list/category-list.component.scss
@@ -1,32 +1,33 @@
 .container {
-    margin: 20px;
-  
-    mat-table {
-      margin-top: 10px;
-      margin-bottom: 20px;
-  
-      .mat-header-row {
-        background-color:#f5f5f5;
-  
-        .mat-header-cell {
-          text-transform: uppercase;
-          font-weight: bold;
-          color: #838383;
-        }      
-      }
-  
-      .mat-column-id {
-        flex: 0 0 20%;
-        justify-content: center;
-      }
-  
-      .mat-column-action {
-        flex: 0 0 10%;
-        justify-content: center;
-      }
-    }
-  
-    .buttons {
-      text-align: right;
-    }
-  }
+  padding: 24px;
+}
+
+.header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 16px;
+}
+
+table {
+  width: 100%;
+  border-collapse: collapse;
+}
+
+th,
+td {
+  padding: 12px;
+  text-align: left;
+}
+
+thead {
+  background-color: #f5f5f5;
+}
+
+.action-column {
+  width: 120px;
+}
+
+mat-icon {
+  vertical-align: middle;
+}
