--- a/tutorial-frontend/client/src/app/loan/loan-list/loan-list.component.html
+++ b/tutorial-frontend/client/src/app/loan/loan-list/loan-list.component.html
@@ -1,82 +1,82 @@
-<div class="container">
-  <h1>Listado de préstamos</h1>
+<h2>Gestión de préstamos</h2>
 
-  <div class="filters">
-    <form>
-      <mat-form-field>
-        <mat-label>Título juego</mat-label>
-        <mat-select [(ngModel)]="filterGame" name="game">
-          <mat-option value="">-</mat-option>
-          <mat-option *ngFor="let game of games" [value]="game">{{ game.title }}</mat-option>
-        </mat-select>
-      </mat-form-field>
+<!-- 🔎 Filtros -->
+<div class="filtros" style="display: flex; gap: 1rem; margin-bottom: 1rem; align-items: flex-end; flex-wrap: wrap;">
+  
+  <!-- Cliente -->
+  <mat-form-field appearance="outline">
+    <mat-label>Cliente</mat-label>
+    <mat-select [(ngModel)]="filterClient">
+      <mat-option *ngFor="let c of clients" [value]="c">{{ c.name }}</mat-option>
+    </mat-select>
+  </mat-form-field>
 
-      <mat-form-field>
-        <mat-label>Cliente</mat-label>
-        <mat-select [(ngModel)]="filterClient" name="client">
-          <mat-option value="">-</mat-option>
-          <mat-option *ngFor="let client of clients" [value]="client">{{ client.name }}</mat-option>
-        </mat-select>
-      </mat-form-field>
+  <!-- Juego -->
+  <mat-form-field appearance="outline">
+    <mat-label>Juego</mat-label>
+    <mat-select [(ngModel)]="filterGame">
+      <mat-option *ngFor="let g of games" [value]="g">{{ g.title }}</mat-option>
+    </mat-select>
+  </mat-form-field>
 
-      <mat-form-field>
-        <mat-label>Fecha de préstamo</mat-label>
-        <input matInput [matDatepicker]="picker1" [(ngModel)]="filterStartDate" name="startDate">
-        <mat-datepicker-toggle matSuffix [for]="picker1"></mat-datepicker-toggle>
-        <mat-datepicker #picker1></mat-datepicker>
-      </mat-form-field>
-    </form>
+  <!-- Fecha -->
+  <mat-form-field appearance="outline">
+    <mat-label>Fecha</mat-label>
+    <input matInput [matDatepicker]="picker" [(ngModel)]="filterDate">
+    <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+    <mat-datepicker #picker></mat-datepicker>
+  </mat-form-field>
 
-    <div class="buttons">
-      <button mat-stroked-button (click)="onCleanFilter()">Limpiar</button>
-      <button mat-stroked-button (click)="onSearch()">Filtrar</button>
-    </div>
-  </div>
-
-  <mat-table [dataSource]="dataSource">
-    <ng-container matColumnDef="id">
-      <mat-header-cell *matHeaderCellDef> Identificador </mat-header-cell>
-      <mat-cell *matCellDef="let element"> {{ element.id }} </mat-cell>
-    </ng-container>
-
-    <ng-container matColumnDef="gameTitle">
-      <mat-header-cell *matHeaderCellDef> Juego </mat-header-cell>
-      <mat-cell *matCellDef="let element"> {{ element.gameTitle }} </mat-cell>
-    </ng-container>
-
-    <ng-container matColumnDef="clientName">
-      <mat-header-cell *matHeaderCellDef> Cliente </mat-header-cell>
-      <mat-cell *matCellDef="let element"> {{ element.clientName }} </mat-cell>
-    </ng-container>
-
-    <ng-container matColumnDef="startDate">
-      <mat-header-cell *matHeaderCellDef> Inicio </mat-header-cell>
-      <mat-cell *matCellDef="let element"> {{ element.startDate | date: 'dd/MM/yyyy' }} </mat-cell>
-    </ng-container>
-
-    <ng-container matColumnDef="endDate">
-      <mat-header-cell *matHeaderCellDef> Devolución </mat-header-cell>
-      <mat-cell *matCellDef="let element"> {{ element.endDate | date: 'dd/MM/yyyy' }} </mat-cell>
-    </ng-container>
-
-    <ng-container matColumnDef="action">
-      <mat-header-cell *matHeaderCellDef> </mat-header-cell>
-      <mat-cell *matCellDef="let element">
-        <button mat-icon-button color="accent" (click)="deleteLoan(element)">
-          <mat-icon>clear</mat-icon>
-        </button>
-      </mat-cell>
-    </ng-container>
-
-    <mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></mat-header-row>
-    <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
-  </mat-table>
-
-  <mat-paginator (page)="loadPage($event)" [pageSizeOptions]="[5, 10, 20]" [pageIndex]="pageNumber"
-    [pageSize]="pageSize" [length]="totalElements" showFirstLastButtons>
-  </mat-paginator>
-
-  <div class="new-button">
-    <button mat-flat-button color="primary" (click)="createLoan()">Nuevo préstamo</button>
-  </div>
+  <!-- Botones -->
+  <button mat-raised-button color="primary" (click)="onSearch()">Filtrar</button>
+  <button mat-stroked-button (click)="clearFilters()">Limpiar</button>
 </div>
+
+<!-- 📄 Tabla de resultados -->
+<table mat-table [dataSource]="loans" class="mat-elevation-z8" style="width: 100%">
+
+  <ng-container matColumnDef="id">
+    <th mat-header-cell *matHeaderCellDef> ID </th>
+    <td mat-cell *matCellDef="let loan"> {{ loan.id }} </td>
+  </ng-container>
+
+  <ng-container matColumnDef="gameTitle">
+    <th mat-header-cell *matHeaderCellDef> Juego </th>
+    <td mat-cell *matCellDef="let loan"> {{ loan.gameTitle }} </td>
+  </ng-container>
+
+  <ng-container matColumnDef="clientName">
+    <th mat-header-cell *matHeaderCellDef> Cliente </th>
+    <td mat-cell *matCellDef="let loan"> {{ loan.clientName }} </td>
+  </ng-container>
+
+  <ng-container matColumnDef="startDate">
+    <th mat-header-cell *matHeaderCellDef> Inicio </th>
+    <td mat-cell *matCellDef="let loan"> {{ loan.startDate }} </td>
+  </ng-container>
+
+  <ng-container matColumnDef="endDate">
+    <th mat-header-cell *matHeaderCellDef> Fin </th>
+    <td mat-cell *matCellDef="let loan"> {{ loan.endDate }} </td>
+  </ng-container>
+
+  <ng-container matColumnDef="action">
+    <th mat-header-cell *matHeaderCellDef> Acción </th>
+    <td mat-cell *matCellDef="let loan">
+      <button mat-icon-button color="accent">
+        <mat-icon>clear</mat-icon>
+      </button>
+    </td>
+  </ng-container>
+
+  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+  <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+</table>
+
+<!-- 📚 Paginador -->
+<mat-paginator
+  [length]="totalElements"
+  [pageSize]="pageSize"
+  [pageSizeOptions]="[5, 10, 20]"
+  (page)="loadPage($event)">
+</mat-paginator>
