--- a/tutorial-frontend/client/src/app/category/category-list/category-list.component.scss
+++ b/tutorial-frontend/client/src/app/category/category-list/category-list.component.scss
@@ -1,32 +1,38 @@
 .container {
-    margin: 20px;
-  
-    mat-table {
-      margin-top: 10px;
-      margin-bottom: 20px;
-  
-      .mat-header-row {
-        background-color:#f5f5f5;
-  
-        .mat-header-cell {
-          text-transform: uppercase;
-          font-weight: bold;
-          color: #838383;
-        }      
-      }
-  
-      .mat-column-id {
-        flex: 0 0 20%;
-        justify-content: center;
-      }
-  
-      .mat-column-action {
-        flex: 0 0 10%;
-        justify-content: center;
+  padding: 5rem 9rem;
+
+  .header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 2rem;
+  }
+
+  mat-table {
+    width: 100%;
+    margin-bottom: 2rem;
+
+    .mat-header-row {
+      background-color: #f5f5f5;
+
+      .mat-header-cell {
+        font-weight: bold;
+        text-transform: uppercase;
       }
     }
-  
-    .buttons {
-      text-align: right;
+
+    .mat-cell,
+    .mat-header-cell {
+      padding: 12px;
+    }
+
+    .mat-column-action {
+      width: 120px;
+      text-align: center;
     }
   }
+}
+
+mat-icon {
+  vertical-align: middle;
+}
